# LauncherV2

./: LICENSE  README.md  bun.lockb  package-lock.json  package.json  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/builds/: download_manager.rs
src/api/: ResponseOrError.ts
src/api/account/interfaces/: StatisticsResponse.ts
src/api/account/requests/: statistics.ts
src/api/authentication/: init.ts
src/api/authentication/interfaces/: AuthResponse.ts
src/api/authentication/requests/: account.ts  asteria.ts  edit_displayname.ts  verify.ts
src/api/authentication/zustand/: state.ts
src/api/config/: endpoints.ts  tauri.ts
src/api/main/interfaces/: news.ts
src/api/main/requests/: banners.ts  files.ts
src/api/storefront/: shop.ts
src/api/xmpp/: socket.ts
src/app/: layout.tsx  not-found.tsx  page.tsx
src/app/home/: page.tsx
src/app/leaderboard/: page.tsx
src/app/servers/: page.tsx
src/app/settings/: page.tsx
src/app/storefront/: page.tsx
src/components/core/: Frame.tsx  SideBar.tsx
src/components/home/: FriendsSection.tsx  NewsSection.tsx  StatisticsSection.tsx
src/components/login/: particles.tsx
src/components/ui/: progress.tsx
src/lib/download/: downloadBuild.ts
