[package]
name = "Solaris"
version = "1.1.0"
description = "Solaris Launcher"
authors = ["itztiva"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "solaris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
sysinfo = "0.29.10"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link", branch = "main" }
regex = "1"
tauri-plugin-dialog = "2"
sha2 = "0.9"
tauri-plugin-notification = "2"
reqwest = { version = "0.11.3", features = ["stream", "blocking", "json"] }
winapi = { version = "0.3", features = ["tlhelp32", "shellapi", "winbase"] }
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }
tauri-plugin-process = "2"
tokio = { version = "=1.32.0", features = ["full"] }
futures = "0.3"
tauri-plugin-log = "2.0.0-rc"
windows = { version = "0.58", features = ["Win32_UI_Shell"] }
futures-util = "0.3"
flate2 = "1.0.25"
indicatif = "0.17.3"
dirs = "5.0.1"
tauri-plugin-websocket = "2"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
